testsuite/tests/arrows/gadt/T9985.stderr

T9985.hs:29:18: error:
    • Proc patterns cannot use existential or GADT data constructors
    • In the pattern: VNil
      In the pattern: a :> VNil
      In the expression: proc (a :> VNil) -> returnA -< a
